--- a/armadura/Armadura/Armadura/Views/LoginPage.xaml
+++ b/armadura/Armadura/Armadura/Views/LoginPage.xaml
@@ -16,7 +16,8 @@
                      Margin="20"
                      >
             
-            <Image Source="logo"></Image>
+            <Image Source="logo"
+                   ></Image>
             <Label 
                    Text="Correo"
                     FontAttributes="Bold"
